# climate-logger-rs

./: Cargo.toml
scripts/: build.sh  flash.sh
src/: main.rs
