[package]
name = "climate_logger_rs"
version = "0.1.0"
authors = ["Jonatan Borkowski <jonatan.borkowski@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
fmt = "0.1.0"
esp32-hal = "0.5.0"
dht-sensor = "0.2.1"
ds1307 = "0.4.0"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
profont = "0.6.1"
embedded-hal = "0.2.7"
esp-hal-common = "0.2.0"
log = "0.4"
heapless = "0.7.16"

esp-println = { version = "0.3.1", features = [ "esp32" ] }
esp-backtrace = { version = "0.2.0", features = ["esp32", "panic-handler", "print-uart"] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }


[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
